objects/amc__Project__c.object
<CustomObject>
    <fields>
        <fullName>amc__Total_Project_Cost_Forecast__c</fullName>
        <formula>IF( ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price&quot;), amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + amc__Material_Costs_Forecast__c + IF(amc__Anticipated_Project_Expenses__c &gt; amc__Actual_Project_Expenses__c, amc__Anticipated_Project_Expenses__c, amc__Actual_Project_Expenses__c),amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + amc__Material_Costs_Forecast__c + amc__Actual_Project_Expenses_Non_Billable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides a cost summary using Hours Completed Value (Cost) + Hours Remaining Value (Cost) + Material Costs Forecast + the greater value between Anticipated and Actual Expenses</inlineHelpText>
        <label>Total Project Cost (Forecast)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Project_Cost_Scheduled__c</fullName>
        <formula>IF(ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price&quot;), amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c + amc__Anticipated_Project_Expenses__c, amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c)</formula>
        <inlineHelpText>Formula Field: Summarises the Hours Scheduled Value (Cost) + Material Costs Scheduled + Anticipated Project Expenses to provide full project costs</inlineHelpText>
        <label>Total Project Cost (Scheduled)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Remaining__c</fullName>
        <formula>IF(ISPICKVAL( amc__Billing_Type__c , &quot;Fixed Price&quot;), amc__Cost_Budget__c - (amc__Amount_Invoiced__c - amc__Total_Credited__c), IF(ISPICKVAL( amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;), amc__Cost_Budget__c - (amc__Amount_Invoiced__c - (amc__Expenses_Invoiced__c + amc__Total_Credited__c)) ,(amc__Hours_Scheduled_Cost__c + IF(amc__Anticipated_Project_Expenses__c &gt; amc__Actual_Project_Expenses__c, amc__Anticipated_Project_Expenses__c, amc__Actual_Project_Expenses__c - amc__Expenses_Invoiced__c)) - (amc__Amount_Invoiced__c - amc__Total_Credited__c)))

/*If Fixed Price, Project Budget - (Amount Invoiced - Amount Credited). If Fixed Price + Expenses, Project Budget - (Amount Invoiced - (Expenses Invoiced + Amount Credited). If Time &amp; Materials, (Scheduled Hours Value (Billable) + (Greater of Anticipated Project Expenses or Actual Project Expenses - Expenses Invoiced) - (Amount Invoiced - Amount Credited)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the value remaining to be invoiced for this project. If Billing Type = Fixed Price, Project Budget - Total Invoiced otherwise Hours Scheduled Value (Billable) - Total Invoiced</inlineHelpText>
        <label>Total Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_Report_Hero_Image_URL__c</fullName>
        <inlineHelpText>Identifes the URL that will be used for the Hero Image on the Status Report Title Page</inlineHelpText>
        <label>Weekly Status Report - Hero Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_Report_Include_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Include the Change Request records in the Weekly Status Report?</inlineHelpText>
        <label>Weekly Status Report - Include CRs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_Report_Include_Gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>include the gantt chart in the weekly status report?</description>
        <label>Weekly Status Report - Include Gantt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_Report_Include_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>include these records in the weekly status report?</description>
        <label>Weekly Status Report - Include Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_Report_Include_Risks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>include these records in the weekly status report?</description>
        <label>Weekly Status Report - Include Risks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_Report_Include_Time_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>include these records in the weekly status report?</description>
        <label>Weekly Status Report - Include Time Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_Report_Start_Date__c</fullName>
        <inlineHelpText>Identifies the Start Date that will applied as a filter for the weekly status report. Only Actions with a Start Date or End Date greater than this date will be included</inlineHelpText>
        <label>Weekly Status Report - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Weekly_Status_report_End_Date__c</fullName>
        <inlineHelpText>Identifies the End Date that will be applied as a filter for the weekly status report. Only Actions with a Start Date or End Date less than this date will be included</inlineHelpText>
        <label>Weekly Status report - End Date</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Completed_Projects</fullName>
        <columns>NAME</columns>
        <columns>amc__Project_Owner__c</columns>
        <columns>amc__Cost_Budget__c</columns>
        <columns>amc__Hours_Remaining__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Projects</label>
    </listViews>
    <listViews>
        <fullName>Joe_s_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>equals</operation>
            <value>Joe Imperato</value>
        </filters>
        <label>Joe&apos;s Projects</label>
    </listViews>
    <listViews>
        <fullName>Kons_Projects</fullName>
        <columns>NAME</columns>
        <columns>amc__Actual_Performance__c</columns>
        <columns>amc__Account__c</columns>
        <columns>amc__Project_Notes_RT__c</columns>
        <columns>amc__Hours_Allocated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>contains</operation>
            <value>Konstantin</value>
        </filters>
        <label>Kons Projects</label>
    </listViews>
    <listViews>
        <fullName>Lee_Project_View</fullName>
        <columns>NAME</columns>
        <columns>amc__Account__c</columns>
        <columns>amc__Total_Actions__c</columns>
        <columns>amc__Complete_Actions__c</columns>
        <columns>amc__Hours_Actual__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>equals</operation>
            <value>Lee Cunningham</value>
        </filters>
        <label>Lee Project View</label>
    </listViews>
    <listViews>
        <fullName>MC_Projects_Not_Complete</fullName>
        <columns>NAME</columns>
        <columns>amc__Project_Owner__c</columns>
        <columns>amc__Hours_Scheduled__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <columns>amc__Hours_Remaining__c</columns>
        <columns>amc__Cost_Budget__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>amc__Non_Billable__c</columns>
        <columns>amc__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>amc__Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>MC Projects Not Complete</label>
    </listViews>
    <listViews>
        <fullName>Morgan_Projects</fullName>
        <columns>NAME</columns>
        <columns>amc__Status__c</columns>
        <columns>amc__Hours_Actual__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>contains</operation>
            <value>Morgan</value>
        </filters>
        <label>Morgan Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>amc__Hours_Completed__c</columns>
        <columns>amc__Hours_Remaining__c</columns>
        <columns>amc__Hours_Scheduled__c</columns>
        <columns>amc__Status__c</columns>
        <columns>amc__Project_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>equals</operation>
            <value>Dan Kellogg</value>
        </filters>
        <filters>
            <field>amc__Status__c</field>
            <operation>equals</operation>
            <value>Planned,In Progress,On Hold</value>
        </filters>
        <label>Dan K Projects</label>
    </listViews>
    <listViews>
        <fullName>Rohit_Project_View</fullName>
        <columns>NAME</columns>
        <columns>amc__Account__c</columns>
        <columns>amc__Total_Actions__c</columns>
        <columns>amc__Complete_Actions__c</columns>
        <columns>amc__Hours_Actual__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>equals</operation>
            <value>Rohit Boggarapu</value>
        </filters>
        <label>Rohit Project View</label>
    </listViews>
    <listViews>
        <fullName>Suresh_Project</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>equals</operation>
            <value>Suresh Kolguri</value>
        </filters>
        <label>Suresh Project</label>
    </listViews>
    <listViews>
        <fullName>Victor_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>amc__Account__c</columns>
        <columns>amc__Actual_Performance__c</columns>
        <columns>amc__Actual_Project_Expenses__c</columns>
        <columns>amc__Actual_Project_Expenses_Billable__c</columns>
        <columns>amc__Actual_Project_Expenses_Non_Billable__c</columns>
        <columns>amc__Colour__c</columns>
        <columns>amc__Hours_Allocated__c</columns>
        <columns>amc__Hours_Per_Day__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <columns>amc__Hours_Completed_Non_Billable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Project_Owner__c</field>
            <operation>contains</operation>
            <value>Cuarental</value>
        </filters>
        <label>Victor&apos;s Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Custom_Services</fullName>
        <active>true</active>
        <description>RT for Custom Copado Services Projects</description>
        <label>Custom Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guide_Show_Me_Services</fullName>
        <active>true</active>
        <description>RT for Guide/Show Services Projects</description>
        <label>Guide/Show Me Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implementation_Packages</fullName>
        <active>true</active>
        <description>RT for Implementation Packages</description>
        <label>Implementation Packages</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Acct_and_Contact_filled_when_complete</fullName>
        <active>true</active>
        <description>Before a project can be marked as complete, it needs to have an account and a contact</description>
        <errorConditionFormula>AND(
  ISCHANGED(amc__Status__c),
  ISPICKVAL(amc__Status__c, &quot;Complete&quot; ),
  ISBLANK(amc__Contact__c)
)</errorConditionFormula>
        <errorMessage>In order to mark a project as Complete, it needs an Account and Contact.
If an opportunity is required, select the Opportunity (New Customer or Renewal) which included the Services product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Periodic_Frequency_only_for_TM</fullName>
        <active>true</active>
        <description>Periodic Frequency can only be used if Billing Type = Time &amp; Materials and Billing Cycle = Periodic or if Billing Type = Fixed Price or Fixed Price + Expenses and Billing Cycle = Retainer</description>
        <errorConditionFormula>AND( NOT(ISBLANK(TEXT( amc__Periodic_Billing_Frequency__c ))) , OR( AND( OR( ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price&quot;), ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;)) , NOT(ISPICKVAL(amc__Billing_Cycle__c, &quot;Retainer&quot;)) ) , AND(ISPICKVAL( amc__Billing_Type__c , &quot;Time &amp; Materials&quot;), NOT(ISPICKVAL(amc__Billing_Cycle__c, &quot;Periodic&quot;)))) )</errorConditionFormula>
        <errorMessage>You can only specify a Periodic Billing Frequency where Billing Type = Time &amp; Materials and Billing Cycle = Periodic or where Billing Type = Fixed Price or Fixed Price + Expenses and Billing Cycle = Retainer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Hex_Colour_Validation</fullName>
        <active>true</active>
        <description>Validates the &apos;Colour Hex&apos; value.</description>
        <errorConditionFormula>AND(
!ISBLANK(amc__Colour_Hex__c),
!REGEX(amc__Colour_Hex__c, &quot;^[a-fA-F0-9]{6}|[a-fA-F0-9]{3}$&quot;)
)</errorConditionFormula>
        <errorMessage>Not a valid colour</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Retainer_Billing_Cycle_Required_Fields</fullName>
        <active>true</active>
        <description>Ensures required fields are populated if Billing Cycle is set to Retainer</description>
        <errorConditionFormula>AND( ISPICKVAL(amc__Billing_Cycle__c, &quot;Retainer&quot;), OR( ISBLANK(amc__Periodic_Billing_Next_Date__c) , ISBLANK(amc__Retainer_Amount__c), ISBLANK(TEXT(amc__Periodic_Billing_Frequency__c))) )</errorConditionFormula>
        <errorMessage>If Billing Cycle = Retainer, you must add values to Periodic Billing Next Date, Retainer Amount and Periodic Billing Frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Retainer_Cannot_Be_Used_With_T_and_M</fullName>
        <active>true</active>
        <description>Prevents Billing Cycle beint set to Retainer if Billing Type is Time &amp; Materials</description>
        <errorConditionFormula>AND( ISPICKVAL(amc__Billing_Cycle__c, &quot;Retainer&quot;) , ISPICKVAL(amc__Billing_Type__c, &quot;Time &amp; Materials&quot;) )</errorConditionFormula>
        <errorMessage>You cannot set Billing Cycle to Retainer if Billing Type is Time &amp; Materials</errorMessage>
    </validationRules>
</CustomObject>